--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,10 +28,12 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t  marckbelt/docker-graphql:0.0.2 .
+        docker build -t  marckbelt/docker-graphql:latest .
     
     - name: "Push docker Image"
       run: |
-        docker push  marckbelt/docker-graphql:0.0.2 
+        docker push  marckbelt/docker-graphql:0.0.2
+        docker push  marckbelt/docker-graphql:latest
         
 #    - name: Build the Docker image
 #     run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
