--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,15 +37,15 @@ jobs:
         echo "Fin del login"
         echo "NEw Version: $NEW_VERSION...!!!!!!!!!!"
         
-    - name: Build Docker Image
-      run: |
-        docker build -t  marckbelt/docker-graphql:0.0.2 .
-        docker build -t  marckbelt/docker-graphql:latest .
-    
-    - name: "Push docker Image"
-      run: |
-        docker push  marckbelt/docker-graphql:0.0.2
-        docker push  marckbelt/docker-graphql:latest
+#    - name: Build Docker Image
+#      run: |
+#        docker build -t  marckbelt/docker-graphql:0.0.2 .
+#       docker build -t  marckbelt/docker-graphql:latest .
+#    
+#   - name: "Push docker Image"
+#      run: |
+#        docker push  marckbelt/docker-graphql:0.0.2
+#        docker push  marckbelt/docker-graphql:latest
         
 #    - name: Build the Docker image
 #     run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
