--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,22 +30,26 @@ jobs:
       env: 
         DOCKER_USER: ${{secrets.DOCKER_USER}}
         DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-        NEW_VERSION: ${{ steps.version.outputs.version }}
+    
       run: |
         echo "Iniciando Login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
         echo "Fin del login"
         echo "NEw Version: $NEW_VERSION ...!!!!!!!!!!"
         
-#    - name: Build Docker Image
-#      run: |
-#        docker build -t  marckbelt/docker-graphql:0.0.2 .
-#       docker build -t  marckbelt/docker-graphql:latest .
-#    
-#   - name: "Push docker Image"
-#      run: |
-#        docker push  marckbelt/docker-graphql:0.0.2
-#        docker push  marckbelt/docker-graphql:latest
+    - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker build -t  marckbelt/docker-graphql:$NEW_VERSION .
+        docker build -t  marckbelt/docker-graphql:latest .
+   
+    - name: "Push docker Image"
+      env:
+         NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push  marckbelt/docker-graphql:$NEW_VERSION
+        docker push  marckbelt/docker-graphql:latest
         
 #    - name: Build the Docker image
 #     run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
