--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,31 +25,36 @@ jobs:
         minor_pattern: "feat:"
         format: "${major}.${minor}.${patch}-prerelease${increment}"
       id: version
-      
-    - name: Docker login
-      env: 
-        DOCKER_USER: ${{secrets.DOCKER_USER}}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
     
+    - name: Docker Login
+      env:
+        DOCKER_USER: ${{ secrets.DOCKER_USER }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        
       run: |
-        echo "Iniciando Login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "Fin del login"
-
         
     - name: Build Docker Image
       env:
         NEW_VERSION: ${{ steps.version.outputs.version }}
       run: |
-        docker build -t  marckbelt/docker-graphql:$NEW_VERSION .
-        docker build -t  marckbelt/docker-graphql:latest .
-   
-    - name: "Push docker Image"
-      env:
-         NEW_VERSION: ${{ steps.version.outputs.version }}
-      run: |
-        docker push  marckbelt/docker-graphql:$NEW_VERSION
-        docker push  marckbelt/docker-graphql:latest
+        docker build -t marckbelt/docker-graphql:$NEW_VERSION .
+        docker build -t marckbelt/docker-graphql:latest .
         
-#    - name: Build the Docker image
-#     run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.version.outputs.version }}
+      run: |
+        docker push marckbelt/docker-graphql:$NEW_VERSION
+        docker push marckbelt/docker-graphql:latest
+      
+    
+    
+    
+    
+    
+    
+    
+    
+#     - name: Build the Docker image
+#       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
