--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,9 +30,11 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        NEW_VERSION: ${{ steps.version.outputs.version }}
         
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+        echo "NEW_versio: $NEW_VERSION"
         
     - name: Build Docker Image
       env:
