--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -34,7 +34,7 @@ jobs:
         
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "NEW_versio: $NEW_VERSION"
+        echo "NEW_version: $NEW_VERSION"
         
     - name: Build Docker Image
       env:
